--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -16,53 +16,107 @@
 </head>
 <body>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        const urlParams = new URLSearchParams(window.location.search);
-        const id = urlParams.get('id');
-        $.ajax({
-                url: 'tests/questions/' + id,
-                dataType: 'text',
-                type: 'GET',
-                success: function (data) {
-
-                    let question = "";
-                    let answers = "";
-                    let questions = $.parseJSON(data);
-                    let i = 0;
-
-                    for (i = 0; i < questions.length; i++) {
-                        let question_id = questions[i].id;
-                        question = questions[i].question;
-                        document.getElementById("question").innerHTML = question;
-                        document.getElementById("answers").innerHTML = answers;
-
-                        let map = questions[i].answers;
-                        for (var j = 0, keys = Object.keys(map), jj = keys.length; j < jj; j++) {
-                            answers += keys[j] + ":" + map[keys[j]];
-                        }
-                    }
-                }
-            }
-        )
-    });
-</script>
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark py-4">
-</nav>
-
 <main role="main">
+    <div class="container" id="container">
 
-    <div class="jumbotron">
-        <div class="container" id="container">
-            <p><span style="font-weight: bold" id="question"></span></p>
-
-            <p><span id="answers"></span></p>
-            <p><a id="testing"></a></p>
+        <div class="jumbotron justify-content-center" id="questionsContainer"></div>
+        <div class="col text-center">
+            <button class="btn btn-primary" id="submitAnswers">Submit Answers</button>
         </div>
     </div>
-    <hr>
-
 </main>
+
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get('id');
+
+    function Question(id, question, questionType, answers) {
+        this.id = id;
+        this.question = question;
+        this.questionType = questionType;
+        this.answers = answers;
+    }
+
+    function createQuestionHTML(question) {
+        var html = '';
+
+        // Question ID (hidden)
+        html += '<input type="hidden" name="questionId" value="' + question.id + '">';
+
+        // Question text
+        html += '<p>' + question.id + '. ' + question.question + '</p>';
+        html += '<input type="hidden" name="questionType" value="' + question.questionType + '">';
+
+        // Answers
+        let i;
+        switch (question.questionType) {
+            case 'SINGLE_ANSWER':
+                for (i in question.answers) {
+                    html += '<input type="radio" name="answer' + question.id + '" value="' + i + '">' + question.answers[i] + '<br>';
+                }
+                break;
+
+            case 'MANY_ANSWERS':
+                for (i in question.answers) {
+                    html += '<input type="checkbox" name="answer' + question.id + '" value="' + i + '">' + question.answers[i] + '<br>';
+                }
+                break;
+
+            case 'USER_INPUT':
+                html += '<input type="text" name="answer' + question.id + '"><br>';
+                break;
+        }
+        html += '<p></p>'
+        return html;
+    }
+
+    $.get("http://localhost:8080/user/tests/questions/" + id, function (data) {
+        let questions = data.map(function (item) {
+            return new Question(item.id, item.question, item.questionType, item.answers);
+        });
+
+        // Create HTML for each question and append it to the page
+        questions.forEach(function (question) {
+            let questionHtml = createQuestionHTML(question);
+            $('#questionsContainer').append(questionHtml);
+        });
+    });
+
+    $('#submitAnswers').on('click', function () {
+        let answers = [];
+
+        // TODO fix later
+        $('input[name^="answer"]').each(function () {
+            let questionId = $(this).attr('name').replace('answer', '');
+            let answerValue = $(this).val();
+
+            if (($(this).attr('type') === 'checkbox' || $(this).attr('type') === 'radio') && !$(this).is(':checked')) {
+                return; // Skip unchecked checkboxes and radio buttons
+            }
+
+            answers.push({
+                questionId: questionId,
+                answer: answerValue,
+                questionType: getQuestionTypeById(questionId) // Assuming you have this function implemented
+            });
+        });
+
+        // Send the answers to the server
+        $.ajax({
+            url: "http://localhost:8080/user/tests/questions/" + id,
+            method: 'POST',
+            data: JSON.stringify(answers),
+            contentType: 'application/json',
+            success: function () {
+                console.log("Successfully submitted answers");
+            }
+        });
+    });
+
+    function getQuestionTypeById(id) {
+        //...
+    }
+</script>
 
 <footer class="container">
     <p>&copy; Yartsev Kirill, 2023</p>
@@ -75,5 +129,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
